css/index.css
html {
  height: 100%;
}

body {
  background-color: #00AAC8;
  height: 100%;
  font-family: 'Proxima Nova', 'Khula', Arial, sans-serif;
}

::-webkit-scrollbar { 
  display: none; 
}


/* Navbar */
nav {
  background-color: #FFFFFF;
  color: #565A5C;
  font-family: 'Proxima Nova', 'Khula', Arial, sans-serif;
}

.nav-menu {
  color:#565A5C;
  font-size: 57px;
}

.nav-link {
  color:#565A5C;
  font-size: 24px;
}

.nav-item.active .nav-link{
  color: #00AAC8;
}
.nav-item:hover .nav-link,
.nav-menu:hover {
  color: #00AAC8;
}

/* Jumbotron */
.jumbotron {
  background: 
    linear-gradient(
      rgba(0, 0, 0, 0.5), 
      rgba(0, 0, 0, 0.5)
    ),
    url("../images/landing/background_image.png") no-repeat center center; 
  background-size: cover;
  margin-bottom: 0px !important;
  position: relative;
  min-height: 100%;
}


.jumbo-title {
  position: absolute;
  left: 50%;
  top: 30%;
}

.jumbo-title-text {
  position: relative;
  left: -50%;
  color:#FFFFFF;
  text-align: center;
}

.jumbo-link:hover {
  text-decoration: none;
}

.title-sm{
  font-size:18px;
}

.title-lg{
  font-size:40px;
}

.button-row{
  position: relative;
  left: -50%;
  color:#FFFFFF;
  text-align: center;
  margin-top:40px;
}

.pill{
	text-decoration:none;
	color:#FFFFFF;
	font-size:24px;
	padding:0 30px;
	line-height:64px;
  height: auto;
  display: inline-block;
  text-align: center;
  background-color:#73b420;
  -webkit-border-radius: 32px;
  -moz-border-radius: 32px;
  border-radius: 32px;
}

.pill:hover{
  color:#FFFFFF;
  background-color:#00AAC8;
  text-decoration:none;
}



.card-link {
  color: #565A5C;
  text-decoration: none;
}


.card:hover {
  color: #565A5C;
  transform: scale(1.1, 1.1);
}




/* RESPONSIVE CSS */
@media (max-width: 576px) {
  .title-sm{
    font-size:12px;
  }
  
  .title-lg{
    font-size:24px;
  }

  .pill {
    font-size: 18px;
    padding:0 20px;
	  line-height:50px;
    -webkit-border-radius: 25px;
    -moz-border-radius: 25px;
    border-radius: 25px;
  }
}





/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: .05rem solid #fff;
}

